--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -54,11 +54,11 @@ jobs:
       - uses: julia-actions/setup-julia@v1
         with:
           version: '1'
-      - run: |
+      - name: Instantiate docs/ environment
+        run: |
           julia --project=docs -e '
             using Pkg
-            #Pkg.add(name="Documenter", rev="master")
-            #Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.develop(PackageSpec(path=pwd()))
             Pkg.instantiate()'
       - run: julia --project=docs --color=yes docs/make.jl
         env:
