--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,14 @@
 name = "DocumenterMermaid"
 uuid = "a078cd44-4d9c-4618-b545-3ab9d77f9177"
 authors = ["Morten Piibeleht <morten.piibeleht@juliahub.com> and contributors"]
-version = "1.0.0-DEV"
+version = "0.1.0"
 
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 MarkdownAST = "d0879d2d-cac2-40c8-9cee-1863dc0c7391"
 
 [compat]
+Documenter = "~1.0"
 MarkdownAST = "0.1"
 julia = "1.6"
 
