--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 MarkdownAST = "d0879d2d-cac2-40c8-9cee-1863dc0c7391"
 
 [compat]
-Documenter = "~1.0"
+Documenter = "~1.0, ~1.1"
 MarkdownAST = "0.1"
 julia = "1.6"
 
